# rick-and-morty-v2

./: .gitignore  main.py  pyproject.toml
app/api_integrations/rick_and_morty/: client.py  enums.py  http_client.py  service.py
output/: many_pages_character.json  many_pages_episode.json  many_pages_location.json  multiple_character.json  multiple_episode.json  multiple_location.json  one_page_character_filter.json  one_page_episode_filter.json  one_page_location_filter.json
