[project]
name = "rick-and-morty-api-v2"
version = "0.1.0"
description = ""
authors = [
    {name = "lionex-ui",email = "eugenemescaline@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx[http2] (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
